refactor: code cleanup around showing clock

--- a/styles/display.module.scss
+++ b/styles/display.module.scss
@@ -3,12 +3,11 @@
   right: 0;
   width: 100%;
   min-height: 100vh;
-  padding: 100px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #111;
-  color: #fff;
+  background: black;
+  color: white;
 
   .clock {
     z-index: 1;
