--- a/styles/display.module.scss
+++ b/styles/display.module.scss
@@ -1,13 +1,12 @@
 .showcase {
-  position: absolute;
-  right: 0;
-  width: 100%;
-  min-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: flex;
   justify-content: center;
   align-items: center;
   background: black;
   color: white;
+  cursor: none;
 
   .clock {
     z-index: 1;
@@ -47,14 +46,5 @@
         opacity: 0;
       }
     }
-  }
-
-  video {
-    position: absolute;
-    top: 0%;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
   }
 }
