refactor: remove import button

--- a/styles/ui.module.scss
+++ b/styles/ui.module.scss
@@ -7,7 +7,7 @@
   .modalBox {
     overflow-y: auto;
     max-height: 80vh;
-    max-width: 80vh;
+    max-width: 80vw;
     overflow-x: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
